# http-redirector

./: Cargo.toml  README.md  example-lookup  example-redirect  lib.rs  main.rs
.github/workflows/: release.yml
src/: lib.rs
