[package]
name = "http-redirector"
version = "0.5.1"
edition = "2021"
authors = ["stackinspector"]
license = "Apache-2.0"
repository = "https://github.com/stackinspector/http-redirector"
description = "A simple http redirection service with access logging based on an input key-link table."
readme = "README.md"

[lib]
name = "http_redirector"
path = "lib.rs"

[[bin]]
name = "hr"
path = "main.rs"

[dependencies]
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", default-features = false, features = ["tcp", "http1", "http2", "client", "runtime"] }
hyper-rustls = { version = "0.23", features = ["webpki-roots"] }
warp = { version = "0.3", default-features = false }
