[package]
name = "http-redirector"
version = "0.8.1"
edition = "2021"
authors = ["stackinspector"]
license = "MIT"
repository = "https://github.com/stackinspector/http-redirector"
description = "A simple http redirection service with access logging based on an input key-link table."
readme = "README.md"

[lib]
name = "http_redirector"
path = "lib.rs"

[[bin]]
name = "hr"
path = "main.rs"

[dependencies]
argh = "0.1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "io-std", "fs"] }
hyper = { version = "0.14", features = ["tcp", "http1", "http2", "client", "server", "runtime"] }
hyper-rustls = { version = "0.24", features = ["webpki-roots"] }
